# grant_pulse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  gifcap.sh  pyproject.toml  run_sync.sh  setup_cron.sh  sync_all.sh
.antigravitycli/: 69a8d173-07ad-4989-a23a-0f44d2de2c9f.json
alembic/: config.py  env.py  models.py
alembic/versions/: 0d1ddae64fa1_make_url_detalle_nullable.py  1b2902bd6ab4_add_region.py  5216e1490621_final_clean_schema.py
docs/: prompt.md  prompt_plan_maestro.md  sercotec_plan.md  siguiente_plan.md
reports/: quality_report_20260605_2313.md  quality_report_20260606_0037.md  quality_report_20260606_0928.md  quality_report_20260606_0951.md  quality_report_20260606_0953.md
rules/: agenciase.yaml  anid.yaml  anid_llm.yaml  corfo.yaml  fia.yaml  fondos_gob.yaml  fosis.yaml  gore_biobio.yaml  indap.yaml  prochile.yaml  sence.yaml  sercotec.yaml  startup_chile.yaml  subdere.yaml
src/: __init__.py
src/core/: __init__.py
src/core/application/: normalizer.py  run_context.py  use_cases.py
src/core/domain/: __init__.py  entities.py  estado_normalizer.py  exceptions.py  fecha_utils.py  ports.py  services.py  (+2 more)
src/infra/: __init__.py  cli.py  config.py  logging.py  maintenance.py  port_utils.py  quality_report.py  rules_loader.py
tests/: __init__.py
tests/integration/: test_pipeline_integration.py  test_use_case_integration.py
tests/unit/: test_api.py  test_change_detector.py  test_change_detector_edge_cases.py  test_curl_cffi.py  test_exceptions.py  test_fecha_utils.py  test_fosis_multipage.py  test_funding_pipeline.py  test_healthcheck.py  test_html_static.py  test_json_api.py  test_llm_client.py  test_llm_factory.py  test_llm_features.py  test_llm_scraper.py  test_new_rules.py  test_normalizer.py  test_notifications.py  test_observability.py  test_pipeline_fallback.py  test_relevancia.py  test_repository.py  test_rss_feed.py  test_rules_config.py  test_rules_edge_cases.py  test_scraper_network_errors.py  test_selector_failures.py  test_sercotec_scraper.py  test_source_catalog.py  test_subdere_homepage.py  test_use_cases.py  test_vigencia.py  test_wp_ajax.py
(+29 files in other folders)
