[project]
name = "grant-pulse"
version = "0.1.0"
description = "Sistema de monitoreo de fondos de financiamiento gubernamentales chilenos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.3",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "groq>=1.2.0",
  "selectolax>=0.3.21",
  "structlog>=24.2.0",
  "pyyaml>=6.0.1",
  "aiosmtplib>=3.0.1",
  "playwright>=1.44.0",
  "markdownify>=0.11.0",
  "curl_cffi>=0.5.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.4.9",
  "respx>=0.21.1",
  "types-pyyaml>=6.0.12.20240311",
]

[project.optional-dependencies]
stealth = [
  "camoufox>=0.4.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["build", "alembic", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG",# flake8-unused-arguments
]
ignore = ["E501"] # Ignore line length as we'll use a formatter

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["build", "alembic", "venv", ".venv"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "venv", "build", "alembic"]
venvPath = "."
venv = "venv"
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
